Addition of simple file handling
